cmake_minimum_required(VERSION 3.17)
project(selection C)

set(CMAKE_C_STANDARD 11)

if(WIN32 AND NOT MINGW)
    link_libraries(ws2_32 wsock32)
    add_executable(selectifon main.c server_win.c test.c server.h server_udp.c)
elseif(WIN32 AND MINGW)
    link_libraries(ws2_32 wsock32)
    add_executable(selectifon main.c server_win.c test.c server.h server_udp.c)
elseif(UNIX AND NOT ANDROID)
    add_executable(${PROJECT_NAME} main.c server.h server_linux.c server_udp_linux.c)
    find_package(Threads)
    target_link_libraries (${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
elseif(ANDROID)
    message("牛逼，不支持ANDROID")
endif()